// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render Expenses Summary with 2 expense 1`] = `
<div>
  <h1>
    Viewing 
    2
     
    expenses
     totalling 
    $1.00
  </h1>
</div>
`;

exports[`Should render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $0.50
  </h1>
</div>
`;
